--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://c1.wallpaperflare.com/preview/181/67/606/black-and-white-indoor-window-dark.jpg') no-repeat center center/cover;
+    background: url('editing_image4.jpg') no-repeat center center/cover;
     z-index: -1;
 }
 
@@ -331,7 +331,7 @@ video {
 }
 
 #contact {
-    background-color: #000;
+    background-color: transparent;
     padding: 100px 20px;
     color: white;
 }
