--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ video {
 }
 
 #contact {
-    background-color: transparent;
+    background-color:black;
     padding: 100px 20px;
     color: white;
 }
